# Open-Reality

./: .bazelrc  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  Manifest.toml  Project.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
bazel/: bun.bzl  julia.bzl
bazel/bun/: bun_repository.bzl
bazel/julia/: julia_repository.bzl
docs/: cli-reference.md
examples/: navigation_demo.jl  navigation_demo_script.jl  open_world_demo.jl
metal_bridge/: BUILD.bazel  Package.swift
openreality-cli/src/: app.rs  build.rs  cli.rs  detect.rs  event.rs  main.rs  runner.rs  state.rs
src/: OpenReality.jl  ecs.jl
src/backend/: opengl.jl
src/components/: animation.jl  ik.jl  lights.jl  terrain.jl  vegetation.jl  world_generator.jl  world_structure.jl
src/debug/: profiler.jl  stats_overlay.jl
src/game/: hot_reload.jl
src/navigation/: agent.jl  astar.jl  navmesh.jl  types.jl
src/procgen/: biome.jl  chunk_cache.jl  chunk_streaming.jl  erosion.jl  noise.jl  structures.jl  vegetation.jl  world_generator.jl  world_seed.jl
src/rendering/: light_culling.jl  pbr_pipeline.jl  post_processing.jl  shader_cache.jl  terrain.jl
src/systems/: animation.jl  ik.jl  structures.jl  terrain.jl  vegetation.jl
src/testing/: image_diff.jl  visual_test_runner.jl
src/windowing/: input.jl
test/: runtests.jl
test/visual/: BUILD.bazel  visual_tests.jl
test/visual/stories/: instancing.jl  lighting.jl  lod.jl  materials.jl  pbr_basic.jl  postfx.jl  shadows.jl  terrain.jl  transparency.jl  ui.jl
(+69 files in other folders)
