load("//bazel:julia.bzl", "julia_test")

julia_test(
    name = "visual_regression_tests",
    src = "visual_tests.jl",
    project_toml = "//:Project.toml",
    manifest_toml = "//:Manifest.toml",
    srcs = [
        "//src:julia_sources",
    ] + glob(["stories/*.jl"]),
    data = glob(["references/*.png"]) + [
        "//openreality-wgpu:openreality_wgpu",
    ] + select({
        "@platforms//os:macos": ["//metal_bridge:MetalBridge"],
        "//conditions:default": [],
    }),
    depot = ["//:precompile"],
    tags = [
        "no-sandbox",
        "local",
        "visual",
    ],
)
